--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,8 @@ speed-measure-plugin*.json
 # IDE - VSCode
 .vscode/*
 !.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
+.vscode/tasks.json
+.vscode/launch.json
 !.vscode/extensions.json
 .history/*
 
